added images file

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
-	<title>Project One - Subpage One</title>
+	<title>Pacific Northwest Whales</title>
 	<link rel="shortcut icon" href="/favicon.ico" type="image/x-icon">
 	<link rel="icon" href="/favicon.ico" type="image/x-icon">
 	<!-- This is a special css library that overrides all the ugle default css styles that come with html5 -->
@@ -13,14 +13,15 @@
 	<!-- These semantic tags were added to help you get started but you are very welcome to delete any of them and do your own thing -->
 	<header>
 		<!-- header, h1, logo etc content -->
-		<h1>Your Project Name, or whatever</h1>
+		<h1>Pacific Northwest Whales</h1>
 	</header>
 	<nav>
 		<!-- Global naviagtion stuff here, but move this or delete this to your liking. Same goes for the rest -->
 		<ul>
-			<li><a href="subpage-one.html">example link to subpage one</a></li>
-			<li><a href="#">link</a></li>
-			<li><a href="#">link</a></li>
+			<li><a href="subpage-one.html" class="Blue">Blue</a></li>
+			<li><a href="#" class="Humpback">Humback</a></li>
+			<li><a href="#" class="Gray">Gray</a></li>
+			<li><a href="#" class="Orca">Orca</a></li>
 		</ul>
 	</nav>
 	<main>
@@ -28,7 +29,7 @@
 	</main>
 	<footer>
 		<!-- footer content here -->
-		&copy; Team Awesome
+		&copy; Kacie Cooper
 	</footer>
 </body>
 </html>
