--- a/index.html
+++ b/index.html
@@ -11,21 +11,20 @@
 </head>
 <body>
 	<!-- These semantic tags were added to help you get started but you are very welcome to delete any of them and do your own thing -->
-	<header>
-		<!-- header, h1, logo etc content -->
-		<h1>Pacific Northwest Whales</h1>
-	</header>
 	<nav>
 		<!-- Global naviagtion stuff here, but move this or delete this to your liking. Same goes for the rest -->
 		<ul>
-			<li><a href="subpage-one.html" class="Blue">Blue</a></li>
+			<li><a href="subpage-one.html" class="Blue" class="active">Blue</a></li>
 			<li><a href="#" class="Humpback">Humback</a></li>
 			<li><a href="#" class="Gray">Gray</a></li>
 			<li><a href="#" class="Orca">Orca</a></li>
 		</ul>
 	</nav>
 
-	
+	<header>
+		<!-- header, h1, logo etc content -->
+		<h1>Pacific Northwest Whales</h1>
+	</header>
 
 	<main>
 	<!-- Main content here -->
