updating and adding

--- a/index.html
+++ b/index.html
@@ -8,8 +8,11 @@
 	<!-- This is a special css library that overrides all the ugle default css styles that come with html5 -->
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/meyer-reset/2.0/reset.min.css">
 	<link rel="stylesheet" href="css/style.css">
+	<link href="https://fonts.googleapis.com/css?family=Barlow|Montserrat&display=swap" rel="stylesheet">
+
 </head>
 <body>
+
 	<!-- These semantic tags were added to help you get started but you are very welcome to delete any of them and do your own thing -->
 	<nav>
 		<!-- Global naviagtion stuff here, but move this or delete this to your liking. Same goes for the rest -->
@@ -27,6 +30,17 @@
 	</header>
 
 	<main>
+		<section>
+			<article>
+		<p>
+			Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+			tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+			
+		</p>
+
+	</article>
+</section>
+
 	<!-- Main content here -->
 	</main>
 	<footer>
