--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 	<link href="https://fonts.googleapis.com/css?family=Barlow|Montserrat&display=swap" rel="stylesheet">
 
 </head>
-<body>
+<body class="homepage">
 
 	<!-- These semantic tags were added to help you get started but you are very welcome to delete any of them and do your own thing -->
 	<nav>
