syncing pages together

--- a/Orca.html
+++ b/Orca.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
-	<title>Pacific Northwest Whales</title>
+	<title>Orca</title>
 	<link rel="shortcut icon" href="/favicon.ico" type="image/x-icon">
 	<link rel="icon" href="/favicon.ico" type="image/x-icon">
 	<!-- This is a special css library that overrides all the ugle default css styles that come with html5 -->
@@ -11,7 +11,7 @@
 	<link href="https://fonts.googleapis.com/css?family=Barlow|Montserrat&display=swap" rel="stylesheet">
 
 </head>
-<body class="home">
+<body class="orca">
 
 	<nav>
 		<ul>
@@ -25,12 +25,12 @@
 	</nav>
 
 	<header>
-		<h1 class="home_header">Pacific Northwest Whales</h1>
+		<h1 class="orca_header">Orcas</h1>
 	</header>
 
 	<main>
 		<section>
-			<article class="home_article">
+			<article class="orca_article">
 		<p>
 			Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
 			tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
