setting up orca page

--- a/Orca.html
+++ b/Orca.html
@@ -36,8 +36,12 @@
 			tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
 			
 		</p>
-
+	
 	</article>
+
+<img src="images/orca_01.png" class="orca_img_1">
+
+
 </section>
 	</main>
 	<footer>
