--- a/Blue.html
+++ b/Blue.html
@@ -16,7 +16,7 @@
 	<nav>
 		<ul>
 			<li><a href="Blue.html" class="Bluepage" class="active">Blue</a></li>
-			<li><a href="Humpback.html" class="Humpbackpage">Humback</a></li>
+			<li><a href="Humpback.html" class="Humpbackpage">Humpback</a></li>
 			<li><a href="Gray.html" class="Graypage">Gray</a></li>
 			<li><a href="Orca.html" class="Orcapage">Orca</a></li>
 		</ul>
@@ -38,6 +38,8 @@
 		</p>
 
 	</article>
+
+	<img src="images/blue_whale.png" class="blue_img_1">
 </section>
 	</main>
 	<footer>
