--- a/Orca.html
+++ b/Orca.html
@@ -16,7 +16,7 @@
 	<nav>
 		<ul>
 			<li><a href="Blue.html" class="Bluepage" class="active">Blue</a></li>
-			<li><a href="Humpback.html" class="Humpbackpage">Humback</a></li>
+			<li><a href="Humpback.html" class="Humpbackpage">Humpback</a></li>
 			<li><a href="Gray.html" class="Graypage">Gray</a></li>
 			<li><a href="Orca.html" class="Orcapage">Orca</a></li>
 		</ul>
@@ -39,7 +39,7 @@
 	
 	</article>
 
-<img src="images/orca_01.png" class="orca_img_1">
+<img src="images/orca_whale.png" class="orca_img_1">
 
 
 </section>
