--- a/Humpback.html
+++ b/Humpback.html
@@ -16,7 +16,7 @@
 	<nav>
 		<ul>
 			<li><a href="Blue.html" class="Bluepage" class="active">Blue</a></li>
-			<li><a href="Humpback.html" class="Humpbackpage">Humback</a></li>
+			<li><a href="Humpback.html" class="Humpbackpage">Humpback</a></li>
 			<li><a href="Gray.html" class="Graypage">Gray</a></li>
 			<li><a href="Orca.html" class="Orcapage">Orca</a></li>
 		</ul>
@@ -36,8 +36,10 @@
 			tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
 			
 		</p>
+</article>
 
-	</article>
+<img src="images/humpback_whale.png" class="humpback_img_1">
+
 </section>
 	</main>
 	<footer>
