in-class-updates

--- a/Gray.html
+++ b/Gray.html
@@ -29,7 +29,7 @@
 	</header>
 
 	<main>
-		<section>
+		<section class="gray_section">
 			<article class="gray_article">
 		<p>
 			Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
