--- a/Humpback.html
+++ b/Humpback.html
@@ -29,7 +29,7 @@
 	</header>
 
 	<main>
-		<section>
+		<section class="humpback_section">
 			<article class="humpback_article">
 		<p>
 			Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
