--- a/Orca.html
+++ b/Orca.html
@@ -29,20 +29,19 @@
 	</header>
 
 	<main>
-		<section>
+		<section class="orca_section">
 			<article class="orca_article">
-		<p>
-			Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-			tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-			
-		</p>
-	
-	</article>
+				<p>
+					Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+					tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
 
-<img src="images/orca_whale.png" class="orca_img_1">
+				</p>
 
+			</article>
 
-</section>
+			<img src="images/orca_whale.png" class="orca_img_1">
+
+		</section>
 	</main>
 	<footer>
 		&copy; Kacie Cooper
