--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 	<!-- This is a special css library that overrides all the ugle default css styles that come with html5 -->
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/meyer-reset/2.0/reset.min.css">
 	<link rel="stylesheet" href="css/style.css">
-	<link href="https://fonts.googleapis.com/css?family=Barlow|Montserrat&display=swap" rel="stylesheet">
+	<link href="https://fonts.googleapis.com/css?family=Barlow:100,100i,200,200i,300,300i,400,400i,500,500i,600,600i,700,700i,800,800i,900,900i|Montserrat:100,100i,200,200i,300,300i,400,400i,500,500i,600,600i,700,700i,800,800i,900,900i&display=swap" rel="stylesheet">
 
 </head>
 <body class="home">
@@ -32,8 +32,9 @@
 		<section class="home_section">
 			<article class="home_article">
 		<p>
-			Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-			tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+			A look into the different types of whales that can be seen off the coast of the Pacific Northwest. 
+			There are several species of whale that migrate from the Arctic to Baja every year, including orcas,
+			gray whales, humpback whales, and blue whales. 
 			
 		</p>
 
