--- a/Blue.html
+++ b/Blue.html
@@ -20,8 +20,8 @@
 			<li><a href="Gray.html" class="Graypage">Gray</a></li>
 			<li><a href="Orca.html" class="Orcapage">Orca</a></li>
 		</ul>
+<a href="index.html" class="homepage_link"><img src="images/homepage_link_img.png" width="60" height="60" alt="whale tail" class="active"></a>
 
-		<a href="index.html" class="homepagelink" class="active">home</a></li>
 	</nav>
 
 	<header>
