--- a/index.html
+++ b/index.html
@@ -21,7 +21,8 @@
 			<li><a href="Orca.html" class="Orcapage">Orca</a></li>
 		</ul>
 
-		<a href="index.html" class="homepagelink" class="active">home</a></li>
+<a href="index.html" class="homepage_link"><img src="images/homepage_link_img.png" width="60" height="60" alt="whale tail" class="active"></a>
+
 	</nav>
 
 	<header>
@@ -37,7 +38,7 @@
 			gray whales, humpback whales, and blue whales. 
 			
 		</p>
-
+ 
 	</article>
 
 	<img src="images/homepage_whale.png" class="homepage_img_1">
