--- a/index.html
+++ b/index.html
@@ -15,10 +15,10 @@
 
 	<nav>
 		<ul>
-			<li><a href="Blue.html" class="Bluepage" class="active">Blue</a></li>
-			<li><a href="Humpback.html" class="Humpbackpage">Humpback</a></li>
-			<li><a href="Gray.html" class="Graypage">Gray</a></li>
-			<li><a href="Orca.html" class="Orcapage">Orca</a></li>
+			<li><a href="blue.html" class="bluepage" class="active">Blue</a></li>
+			<li><a href="humpback.html" class="humpbackpage">Humpback</a></li>
+			<li><a href="gray.html" class="graypage">Gray</a></li>
+			<li><a href="orca.html" class="orcapage">Orca</a></li>
 		</ul>
 
 <a href="index.html" class="homepage_link"><img src="images/homepage_link_img.png" width="60" height="60" alt="whale tail" class="active"></a>
