--- a/Blue.html
+++ b/Blue.html
@@ -32,14 +32,25 @@
 		<section class="blue_section">
 			<article class="blue_article">
 		<p>
-			Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-			tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-			
+			Blue whales are the largest animals ever known to have lived on Earth. These magnificent marine mammals rule the oceans at up to 100 feet long and upwards of 200 tons. Their tongues alone can weigh as much as an elephant. Their hearts, as much as an automobile.
+
 		</p>
 
 	</article>
 
+
 	<img src="images/blue_whale.png" class="blue_img_1">
+
+
+			<article>		
+			
+				<h2 class="blue_conservation">Conservation</h2>
+				
+				<p>	Aggressive hunting in the 1900s by whalers seeking whale oil drove them to the brink of extinction. Between 1900 and the mid-1960s, some 360,000 blue whales were slaughtered. They finally came under protection with the 1966 International Whaling Commission, but they've managed only a minor recovery since then.
+            	Blue whales have few predators but are known to fall victim to attacks by sharks and killer whales, and many are injured or die each year from impacts with large ships.
+			</p>
+
+			</article>
 </section>
 	</main>
 	<footer>
