--- a/Gray.html
+++ b/Gray.html
@@ -33,14 +33,25 @@
 		<section class="gray_section">
 			<article class="gray_article">
 		<p>
-			Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-			tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+			Gray whales are often covered with parasites and other organisms that make their snouts and backs look like a crusty ocean rock.
 			
 		</p>
 
 	</article>
 
+
 	<img src="images/gray_whale.png" class="gray_img_1">
+
+
+			<article>		
+			
+				<h2 class="gray_conservation">Conservation</h2>
+				
+				<p> 
+			Like all whales, gray whales surface to breathe, so migrating groups are often spotted from North America's west coast. These whales were once the target of extensive hunting, and by early in the 20th century they were in serious danger of extinction.
+			Today gray whales are protected by international law, and their numbers have grown. In 1994, the gray whale was removed from the United States endangered species list.</p>
+
+			</article>
 </section>
 	</main>
 	<footer>
