--- a/Orca.html
+++ b/Orca.html
@@ -33,20 +33,12 @@
 		<section class="orca_section">
 			<article class="orca_article">
 				<p>
-					Orcas, or killer whales, are the largest of the dolphins and one of the world's most powerful predators. They're immediately recognizable by their distinctive black-and-white coloring. Smart and social, orcas make a wide variety of communicative sounds, and each pod has distinctive noises that its members will recognize even at a distance. They use echolocation to communicate and hunt, making sounds that travel underwater until they encounter objects, then bounce back, revealing their location, size, and shape.
+					Orcas, or killer whales, are the largest of the dolphins and one of the world's most powerful predators. They're immediately recognizable by their distinctive black-and-white coloring. Smart and social, orcas make a wide variety of sounds, and each pod has distinctive noises that its members will recognize even at a distance. They use echolocation to communicate and hunt, making sounds that travel underwater until they encounter objects, then bounce back, revealing their location, size, and shape.
 				</p>
 			</article>
 			
 
 			<img src="images/orca_whale.png" class="orca_img_1">
-
-			<article>		
-			
-				<h2 class="orca_captivity">Captivity</h2>
-				
-				<p> Orcas are highly intelligent, social mammals that have long been a part of marine park entertainment, performing shows for audiences. However, it's become increasingly clear that orcas do not thrive in captivity.</p>
-
-			</article>
 
 
 		</section>
