--- a/Gray.html
+++ b/Gray.html
@@ -21,7 +21,7 @@
 			<li><a href="orca.html" class="orcapage">Orca</a></li>
 		</ul>
 
-		<a href="index.html" class="homepage_link"><img src="images/homepage_link_img.png" width="60" height="60" alt="whale tail" class="active"></a>
+		<a href="index.html" class="homepage_link"><img src="images/homepage_link_img.png" width="50" height="50" alt="whale tail" class="active"></a>
 
 	</nav>
 
@@ -31,29 +31,20 @@
 
 	<main>
 		<section class="gray_section">
+
+
+	<img src="images/gray_whale.png" class="gray_img_1">
 			<article class="gray_article">
 		<p>
-			Gray whales are often covered with parasites and other organisms that make their snouts and backs look like a crusty ocean rock.
+			Gray whales are often covered with parasites and other organisms that make their snouts and backs look like a crusty ocean rock. The gray whale is one of the animal kingdom's great migrators. Traveling in groups called pods, some of these giants swim 12,430 miles round-trip from their summer home in Alaskan waters to the warmer waters off the Mexican coast.
 			
 		</p>
 
 	</article>
-
-
-	<img src="images/gray_whale.png" class="gray_img_1">
-
-
-			<article>		
-			
-				<h2 class="gray_conservation">Conservation</h2>
-				
-				<p> 
-			Like all whales, gray whales surface to breathe, so migrating groups are often spotted from North America's west coast. These whales were once the target of extensive hunting, and by early in the 20th century they were in serious danger of extinction.
-			Today gray whales are protected by international law, and their numbers have grown. In 1994, the gray whale was removed from the United States endangered species list.</p>
-
-			</article>
 </section>
 	</main>
+
+
 	<footer>
 		&copy; Kacie Cooper
 	</footer>
