--- a/Humpback.html
+++ b/Humpback.html
@@ -21,12 +21,12 @@
 			<li><a href="orca.html" class="orcapage">Orca</a></li>
 		</ul>
 
-		<a href="index.html" class="homepage_link"><img src="images/homepage_link_img.png" width="60" height="60" alt="whale tail" class="active"></a>
+		<a href="index.html" class="homepage_link"><img src="images/homepage_link_img.png" width="50" height="50" alt="whale tail" class="active"></a>
 
 	</nav>
 
 	<header>
-		<h1 class="humpback_header">Humpback Whales</h1>
+		<h1 class="humpback_header">Humpback <br>Whales</h1>
 	</header>
 
 	<main>
