trying to update link colors

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <body class="home">
 
 	<nav>
-		<ul>
+		<ul class="home_nav">
 			<li><a href="blue.html" class="bluepage" class="active">Blue</a></li>
 			<li><a href="humpback.html" class="humpbackpage">Humpback</a></li>
 			<li><a href="gray.html" class="graypage">Gray</a></li>
