--- a/index.html
+++ b/index.html
@@ -11,10 +11,10 @@
 	<link href="https://fonts.googleapis.com/css?family=Barlow:100,100i,200,200i,300,300i,400,400i,500,500i,600,600i,700,700i,800,800i,900,900i|Montserrat:100,100i,200,200i,300,300i,400,400i,500,500i,600,600i,700,700i,800,800i,900,900i&display=swap" rel="stylesheet">
 
 </head>
-<body class="home">
+<body>
 
 	<nav>
-		<ul class="home_nav">
+		<ul>
 			<li><a href="blue.html" class="bluepage" class="active">Blue</a></li>
 			<li><a href="humpback.html" class="humpbackpage">Humpback</a></li>
 			<li><a href="gray.html" class="graypage">Gray</a></li>
