--- a/gray.html
+++ b/gray.html
@@ -14,7 +14,7 @@
 <body class="gray">
 
 	<nav>
-		<ul>
+		<ul class="gray_ul">
 			<li><a href="blue.html" class="bluepage" class="active">Blue</a></li>
 			<li><a href="humpback.html" class="humpbackpage">Humpback</a></li>
 			<li><a href="gray.html" class="graypage">Gray</a></li>
