--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en-us">
 <head>
 	<meta charset="UTF-8">
 	<title>Pacific Northwest Whales</title>
-	<link rel="shortcut icon" href="images/favicon.ico" type="image/x-icon">
+	<link rel="shortcut icon"  href="images/favicon.ico" type="image/x-icon">
 	<link rel="icon" href="images/favicon.ico" type="image/x-icon">
 	<!-- This is a special css library that overrides all the ugle default css styles that come with html5 -->
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/meyer-reset/2.0/reset.min.css">
@@ -17,7 +17,7 @@
 		<ul class="home_ul">
 			<li><a href="blue.html" class="bluepage" class="active">Blue</a></li>
 			<li><a href="humpback.html" class="humpbackpage">Humpback</a></li>
-			<li><a href="gray.html" class="graypage">Gray</a></li>
+			<li><a href="gray.html"  class="graypage">Gray</a></li>
 			<li><a href="orca.html" class="orcapage">Orca</a></li>
 		</ul>
 
@@ -41,7 +41,7 @@
 				
 			</article>
 
-			<img src="images/homepage_whale.png" class="homepage_img_1">
+			<img src="images/homepage_whale.png" class="homepage_img_1 alt="whale group illustration">
 		</section>
 	</main>
 	<footer>
