added alt descriptions to images

--- a/blue.html
+++ b/blue.html
@@ -32,7 +32,7 @@
 		<section class="blue_section">
 			
 
-			<img src="images/blue_whale.png" class="blue_img_1">
+			<img src="images/blue_whale.png" alt="blue whale illustration" class="blue_img_1">
 
 			<article class="blue_article">
 				<p>
