--- a/humpback.html
+++ b/humpback.html
@@ -37,7 +37,7 @@
 				</p>
 			</article>
 
-			<img src="images/humpback_whale.png" class="humpback_img_1">
+			<img src="images/humpback_whale.png" alt="humpback whale illustration"  class="humpback_img_1">
 
 		</section>
 	</main>
