--- a/orca.html
+++ b/orca.html
@@ -38,7 +38,7 @@
 			</article>
 			
 
-			<img src="images/orca_whale.png" class="orca_img_1">
+			<img src="images/orca_whale.png" alt="orca whale illustration" class="orca_img_1">
 
 
 		</section>
