fixing and cleaning code

--- a/humpback.html
+++ b/humpback.html
@@ -29,7 +29,7 @@
 		<h1 class="humpback_header">Humpback <br>Whales</h1>
 	</header>
 
-	<main>
+	<main class="humpback">
 		<section class="humpback_section">
 			<article class="humpback_article">
 				<p>
