--- a/orca.html
+++ b/orca.html
@@ -29,7 +29,7 @@
 		<h1 class="orca_header">Orcas</h1>
 	</header>
 
-	<main>
+	<main class="orca">
 		<section class="orca_section">
 			<article class="orca_article">
 				<p>
