--- a/humpback.html
+++ b/humpback.html
@@ -26,7 +26,7 @@
 	</nav>
 
 	<header>
-		<h1 class="humpback_header">Humpback <br>Whales</h1>
+		<h1 class="humpback_header">Humpback Whales</h1>
 	</header>
 
 	<main class="humpback">
