--- a/gray.html
+++ b/gray.html
@@ -8,7 +8,7 @@
 	<!-- This is a special css library that overrides all the ugle default css styles that come with html5 -->
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/meyer-reset/2.0/reset.min.css">
 	<link rel="stylesheet" href="css/style.css">
-	<link href="https://fonts.googleapis.com/css?family=Barlow|Montserrat&display=swap" rel="stylesheet">
+	<link href="https://fonts.googleapis.com/css?family=ABeeZee|Staatliches&display=swap" rel="stylesheet">
 
 </head>
 <body class="gray">
