--- a/humpback.html
+++ b/humpback.html
@@ -33,7 +33,7 @@
 		<section class="humpback_section">
 			<article class="humpback_article">
 				<p>
-					Humpback whales are found in every ocean in the world. Their Latin name, Megaptera novaeangliae, means "big wing of New England." It refers to their giant pectoral fins, which can grow up to 16 feet long, and their appearance off the coast of New England, where European whalers first encountered them. They have dark backs, light bellies, pleats on their throats, and a small hump in front of their dorsal fin, leading to the common name of "humpback."
+					Humpback whales are found in every ocean in the world. Their Latin name, Megaptera novaeangliae, means "big wing of New England." It refers to their giant pectoral fins, which can grow up to 16 feet long, and their appearance off the coast of New England. They have dark backs, light bellies, pleats on their throats, and a small hump in front of their dorsal fin, leading to the common name of "humpback."
 				</p>
 			</article>
 
