--- a/blue.html
+++ b/blue.html
@@ -13,36 +13,36 @@
 <body class="blue">
 
 	<nav>
-		<ul class="blue_ul">
+		<ul class="home_ul">
 			<li><a href="blue.html" class="bluepage" class="active">Blue</a></li>
 			<li><a href="humpback.html" class="humpbackpage">Humpback</a></li>
-			<li><a href="gray.html" class="graypage">Gray</a></li>
+			<li><a href="gray.html"  class="graypage">Gray</a></li>
 			<li><a href="orca.html" class="orcapage">Orca</a></li>
+			<a href="index.html" class="homepage_link"><img src="images/homepage_link_img.png" width="40" height="40" alt="whale tail" class="active"></a>
 		</ul>
-		<a href="index.html" class="homepage_link"><img src="images/homepage_link_img.png" width="50" height="50" alt="whale tail" class="active"></a>
-
 	</nav>
 
-	<header>
-		<h1 class="blue_header">Blue Whales</h1>
-	</header>
+	<main>
+		<h1 class="blue_header"> Blue Whales</h1>
 
-	<main class="blue">
-		<section class="blue_section">
-			
-			<article class="blue_article">
+		<section class="blue_section"> 		
+			<div class="blue_article"> 
+				<h2> About the Great Blue Whale</h2>
 				<p>
 					Blue whales are the largest animals ever known to have lived on Earth. These magnificent marine mammals rule the oceans at up to 100 feet long and upwards of 200 tons. Their tongues alone can weigh as much as an elephant. Their hearts, as much as an automobile.
 
 				</p>
+			</div>
 
-			</article>
-			
-			<img src="images/blue_whale.png" alt="blue whale illustration" class="blue_img_1">
-
-
+			<div>	
+				<img src="images/blue_whale.png" alt="blue whale illustration" class="blue_img_1">
+			</div>	
 		</section>
+
+
 	</main>
+
+
 	<footer>
 		&copy; Kacie Cooper
 	</footer>
