--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 	<link rel="icon" href="images/favicon.ico" type="image/x-icon">
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/meyer-reset/2.0/reset.min.css">
 	<link rel="stylesheet" href="css/style.css">
-	<link href="https://fonts.googleapis.com/css?family=ABeeZee|Staatliches&display=swap" rel="stylesheet">
+	<link href="https://fonts.googleapis.com/css?family=ABeeZee 400,400i|Staatliches&display=swap" rel="stylesheet">
 
 </head>
 <body>
@@ -18,30 +18,30 @@
 			<li><a href="humpback.html" class="humpbackpage">Humpback</a></li>
 			<li><a href="gray.html"  class="graypage">Gray</a></li>
 			<li><a href="orca.html" class="orcapage">Orca</a></li>
+			<a href="index.html" class="homepage_link"><img src="images/homepage_link_img.png" width="40" height="40" alt="whale tail" class="active"></a>
 		</ul>
-
-		<a href="index.html" class="homepage_link"><img src="images/homepage_link_img.png" width="50" height="50" alt="whale tail" class="active"></a>
-
 	</nav>
 
-	<header>
-		<h1 class="home_header" >Pacific Northwest Whales</h1>
-	</header>
 
 	<main>
-		<section class="home_section">
-			<article class="home_article">
+		<h1 class="home_header"> Pacific Northwest Whales</h1>
+
+		<section class="home_section"> 		
+			<div class="home_article"> 
+				<h2> Diving In </h2>
 				<p>
 					A look into the different types of whales that can be seen off the coast of the Pacific Northwest. 
 					There are several species of whale that migrate from the Arctic to Baja every year, including orcas,
 					gray whales, humpback whales, and blue whales. 
-					
 				</p>
-				
-			</article>
+			</div>
 
-			<img src="images/homepage_whale.png" class="homepage_img_1 alt="whale group illustration">
+			<div>	
+				<img src="images/homepage_whale.png" class="homepage_img_1 alt="whale group illustration">
+			</div>	
 		</section>
+
+
 	</main>
 	<footer>
 		&copy; Kacie Cooper
