--- a/orca.html
+++ b/orca.html
@@ -14,36 +14,37 @@
 <body class="orca">
 
 	<nav>
-		<ul class="orca_ul">
+		<ul class="home_ul">
 			<li><a href="blue.html" class="bluepage" class="active">Blue</a></li>
 			<li><a href="humpback.html" class="humpbackpage">Humpback</a></li>
-			<li><a href="gray.html" class="graypage">Gray</a></li>
+			<li><a href="gray.html"  class="graypage">Gray</a></li>
 			<li><a href="orca.html" class="orcapage">Orca</a></li>
+			<a href="index.html" class="homepage_link"><img src="images/homepage_link_img.png" width="40" height="40" alt="whale tail" class="active"></a>
 		</ul>
-
-		<a href="index.html" class="homepage_link"><img src="images/homepage_link_img.png" width="50" height="50" alt="whale tail" class="active"></a>
-
 	</nav>
 
-	<header>
-		<h1 class="orca_header">Orcas</h1>
-	</header>
 
-	<main class="orca">
-		<section class="orca_section">
-			
-			
-			<article class="orca_article">
+
+	<main>
+		<h1 class="orca_header"> Orcas</h1>
+
+		<section class="orca_section"> 		
+			<div class="orca_article"> 
+				<h2> What Makes Them Special </h2>
 				<p>
-					Orcas, or killer whales, are the largest of the dolphins and one of the world's most powerful predators. They're immediately recognizable by their distinctive black-and-white coloring. Smart and social, orcas make a wide variety of sounds, and each pod has distinctive noises that its members will recognize even at a distance. 
+					Orcas, or killer whales, are the largest of the dolphins and one of the world's most powerful predators. They're immediately recognizable by their distinctive black-and-white coloring. Smart and social, orcas make a wide variety of sounds, and each pod has distinctive noises that its members will recognize even at a distance.  
 				</p>
-			</article>
-			
+			</div>
 
+			<div>	
 			<img src="images/orca_whale.png" alt="orca whale illustration" class="orca_img_1">
-
-
+			</div>	
 		</section>
+
+
+	</main>
+
+
 	</main>
 	<footer>
 		&copy; Kacie Cooper
