--- a/gray.html
+++ b/gray.html
@@ -13,35 +13,43 @@
 <body class="gray">
 
 	<nav>
-		<ul class="gray_ul">
+		<ul class="home_ul">
 			<li><a href="blue.html" class="bluepage" class="active">Blue</a></li>
 			<li><a href="humpback.html" class="humpbackpage">Humpback</a></li>
-			<li><a href="gray.html" class="graypage">Gray</a></li>
+			<li><a href="gray.html"  class="graypage">Gray</a></li>
 			<li><a href="orca.html" class="orcapage">Orca</a></li>
+			<a href="index.html" class="homepage_link"><img src="images/homepage_link_img.png" width="40" height="40" alt="whale tail" class="active"></a>
 		</ul>
-
-		<a href="index.html" class="homepage_link"><img src="images/homepage_link_img.png" width="50" height="50" alt="whale tail" class="active"></a>
-
 	</nav>
+
 
 	<header>
 		<h1 class="gray_header">Gray Whales</h1>
 	</header>
 
-	<main class="gray">
+	<main>
+
 		<section class="gray_section">
 
-
+			<div>
 			<img src="images/gray_whale.png" alt="gray whale illustration" class="gray_img_1">
-			
-			<article class="gray_article">
-				<p>
+			</div>
+
+
+			<div class="gray_article">
+					<h2> A Little More </h2>
+					<p>
 					Gray whales are often covered with parasites and other organisms that make their snouts and backs look like a crusty ocean rock. The gray whale is one of the animal kingdom's great migrators. Traveling in groups called pods, some of these giants swim 12,430 miles round-trip from their summer home in Alaskan waters to the warmer waters off the Mexican coast.
 					
-				</p>
+					</p>
 
-			</article>
+			</div>
+
 		</section>
+
+
+
+
 	</main>
 
 
