--- a/humpback.html
+++ b/humpback.html
@@ -13,33 +13,37 @@
 <body class="humpback">
 
 	<nav>
-		<ul class="humpback_ul">
+		<ul class="home_ul">
 			<li><a href="blue.html" class="bluepage" class="active">Blue</a></li>
 			<li><a href="humpback.html" class="humpbackpage">Humpback</a></li>
-			<li><a href="gray.html" class="graypage">Gray</a></li>
+			<li><a href="gray.html"  class="graypage">Gray</a></li>
 			<li><a href="orca.html" class="orcapage">Orca</a></li>
+			<a href="index.html" class="homepage_link"><img src="images/homepage_link_img.png" width="40" height="40" alt="whale tail" class="active"></a>
 		</ul>
-
-		<a href="index.html" class="homepage_link"><img src="images/homepage_link_img.png" width="50" height="50" alt="whale tail" class="active"></a>
-
 	</nav>
 
-	<header>
-		<h1 class="humpback_header">Humpback Whales</h1>
-	</header>
 
-	<main class="humpback">
-		<section class="humpback_section">
-			<article class="humpback_article">
+
+	<main>
+		<h1 class="humpback_header"> Humpback Whales</h1>
+
+		<section class="humpback_section"> 		
+			<div class="humpback_article"> 
+				<h2> A Closer Look </h2>
 				<p>
-					Humpback whales are found in every ocean in the world. Their Latin name, Megaptera novaeangliae, means "big wing of New England." It refers to their giant pectoral fins, which can grow up to 16 feet long, and their appearance off the coast of New England. They have dark backs, light bellies, pleats on their throats, and a small hump in front of their dorsal fin, leading to the common name of "humpback."
+				Humpback whales are found in every ocean in the world. Their Latin name, Megaptera novaeangliae, means "big wing of New England." It refers to their giant pectoral fins, which can grow up to 16 feet long, and their appearance off the coast of New England. They have dark backs, light bellies, pleats on their throats, and a small hump in front of their dorsal fin, leading to the common name of "humpback."
 				</p>
-			</article>
+			</div>
 
+			<div>	
 			<img src="images/humpback_whale.png" alt="humpback whale illustration"  class="humpback_img_1">
-
+			</div>	
 		</section>
+
+
 	</main>
+
+
 	<footer>
 		&copy; Kacie Cooper
 	</footer>
