--- a/orca.html
+++ b/orca.html
@@ -26,6 +26,10 @@
 
 
 	<main>
+		<div id="orca-bg">
+			
+			
+		</div>
 		<h1 class="orca_header"> Orcas</h1>
 
 		<section class="orca_section"> 		
