trying to animate waves

--- a/index.html
+++ b/index.html
@@ -46,5 +46,18 @@
 	<footer>
 		&copy; Kacie Cooper
 	</footer>
+	
+	<!-- link for jquery -->
+		
+	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+    <script type="text/javascript" src="script.js"></script>
+	<script
+  	src="https://code.jquery.com/jquery-3.4.1.min.js"
+  	integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo="
+  	crossorigin="anonymous"></script>
+  	<!-- link for your script file -->
+  	<script src="scripts/script.js"></script>
+</body>
+</html>
 </body>
 </html>
