--- a/orca.html
+++ b/orca.html
@@ -26,11 +26,10 @@
 
 
 	<main>
-		<div id="orca-bg">
-			
+
 			
 		</div>
-		<h1 class="orca_header"> Orcas</h1>
+		<h1 class="orca_header" class="hvr-bob"> Orcas</h1>
 
 		<section class="orca_section"> 		
 			<div class="orca_article"> 
