trying to animate background

--- a/orca.html
+++ b/orca.html
@@ -23,13 +23,11 @@
 		</ul>
 	</nav>
 
-
-
 	<main>
 
 			
 		</div>
-		<h1 class="orca_header" class="hvr-bob"> Orcas</h1>
+		<h1 class="orca_header">Orcas</h1>
 
 		<section class="orca_section"> 		
 			<div class="orca_article"> 
