--- a/index.html
+++ b/index.html
@@ -37,7 +37,13 @@
 			</div>
 
 			<div>	
-				<img src="images/homepage_whale.png" class="homepage_img_1 alt="whale group illustration">
+					<img src="whale_homepage_background.svg" class="homepage_img alt="whale group illustration">
+					<img src="whale_homepage_blue.svg" class="homepage_img alt="whale group illustration">
+					<img src="whale_homepage_gray.svg" class="homepage_img alt="whale group illustration">
+					<img src="whale_homepage_orca.svg" class="homepage_img alt="whale group illustration">
+					<img src="whale_homepage_humpback.svg" class="homepage_img alt="whale group illustration">
+
+
 			</div>	
 		</section>
 
@@ -48,16 +54,10 @@
 	</footer>
 	
 	<!-- link for jquery -->
-		
-	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-    <script type="text/javascript" src="script.js"></script>
 	<script
-  	src="https://code.jquery.com/jquery-3.4.1.min.js"
-  	integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo="
-  	crossorigin="anonymous"></script>
-  	<!-- link for your script file -->
-  	<script src="scripts/script.js"></script>
-</body>
-</html>
+  		src="https://code.jquery.com/jquery-3.4.1.min.js"
+  		integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo="
+  		crossorigin="anonymous"></script>
+	<script type="text/javascript" src="scripts/css3-animate-it.js"></script>
 </body>
 </html>
