added opacity hover to homepage

--- a/index.html
+++ b/index.html
@@ -36,16 +36,17 @@
 				</p>
 			</div>
 
-			<div>	
-					<img src="whale_homepage_background.svg" class="homepage_img alt="whale group illustration">
-					<img src="whale_homepage_blue.svg" class="homepage_img alt="whale group illustration">
-					<img src="whale_homepage_gray.svg" class="homepage_img alt="whale group illustration">
-					<img src="whale_homepage_orca.svg" class="homepage_img alt="whale group illustration">
-					<img src="whale_homepage_humpback.svg" class="homepage_img alt="whale group illustration">
+			<div>
 
+			<img src="images/homepage_whale.png" class="homepage_img" alt="whale group illustration">
+			
+		
 
-			</div>	
+			</div>
+
 		</section>
+
+
 
 
 	</main>
