--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 			<div class="home_article"> 
 
 				
-				<h2> Diving In </h2>
+				<h2 class="homepage-h2"> Diving In </h2>
 				<p>
 					A look into the different types of whales that can be seen off the coast of the Pacific Northwest. 
 					There are several species of whale that migrate from the Arctic to Baja every year, including orcas,
