--- a/gray.html
+++ b/gray.html
@@ -37,7 +37,7 @@
 
 
 			<div class="gray_article">
-					<h2> A Little More </h2>
+					<h2 class="gray-h2"> A Little More </h2>
 					<p>
 					Gray whales are often covered with parasites and other organisms that make their snouts and backs look like a crusty ocean rock. The gray whale is one of the animal kingdom's great migrators. Traveling in groups called pods, some of these giants swim 12,430 miles round-trip from their summer home in Alaskan waters to the warmer waters off the Mexican coast.
 					
