--- a/orca.html
+++ b/orca.html
@@ -33,7 +33,7 @@
 
 		<section class="orca_section"> 		
 			<div class="orca_article"> 
-				<h2> What Makes Them Special </h2>
+				<h2 class="orca-h2"> What Makes Them Special </h2>
 				<p>
 					Orcas, or killer whales, are the largest of the dolphins and one of the world's most powerful predators. They're immediately recognizable by their distinctive black-and-white coloring. Smart and social, orcas make a wide variety of sounds, and each pod has distinctive noises that its members will recognize even at a distance.  
 				</p>
