--- a/gray.html
+++ b/gray.html
@@ -24,7 +24,10 @@
 
 
 	<header>
-		<h1 class="gray_header">Gray Whales</h1>
+		<div class="gray-h1">
+			<h1 class="gray_header">Gray Whales</h1>
+		</div>
+			
 	</header>
 
 	<main>
