--- a/blue.html
+++ b/blue.html
@@ -23,11 +23,13 @@
 	</nav>
 
 	<main>
+		<div class="blue-h1">
 		<h1 class="blue_header"> Blue Whales</h1>
+		</div>
 
 		<section class="blue_section"> 		
 			<div class="blue_article"> 
-				
+
 				<h2 class="blue-h2"> About the Great Blue Whale</h2>
 				<p>
 					Blue whales are the largest animals ever known to have lived on Earth. These magnificent marine mammals rule the oceans at up to 100 feet long and upwards of 200 tons. Their tongues alone can weigh as much as an elephant. Their hearts, as much as an automobile.
