--- a/humpback.html
+++ b/humpback.html
@@ -25,8 +25,10 @@
 
 
 	<main>
-		<h1 class="humpback_header"> Humpback Whales</h1>
-
+		<div class="humpback-h1">
+			<h1 class="humpback_header"> Humpback Whales</h1>
+		</div>
+			
 		<section class="humpback_section"> 		
 			<div class="humpback_article"> 
 				<h2 class="humpback-h2"> A Closer Look </h2>
